# bpy-dev-utilities

./: .gitignore  CHANGELOG.MD  README.md  bpydevutil.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py
src/: setup.py
src/bpydevutil/: __init__.py  __main__.py  common.py  install.py  main.py
src/bpydevutil/functions/: common.py  common_funcs.py  install.py  install_funcs.py  pack.py  pack_funcs.py  symlink.py
tests/: conftest.py  test_arguments.py  test_common.py  test_config_parse.py  test_install.py  test_pack.py  test_symlink.py
tests/tests_common/: test_check_directories.py  test_clear_old_addon.py  test_clear_unused_files.py  test_get_addon_srcs.py  test_get_toml.py  test_prase_toml.py
tests/tests_install/: test_install.py
tests/tests_pack/: test_pack.py
tests/tests_symlink/: test_symlink.py
