[tool.poetry]
name = "bpydevutil"
version = "0.2.0"
description = "This is a personal collection of simple CLI utilities that I made to help my development of Blender addons."
authors = ["Matt Ashpole <m.d.ashpole@gmail.com>"]
readme = "README.md"
packages = [{include = "bpydevutil", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.6.1"
rich = "^12.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-order = "^1.0.1"

[tool.poetry.scripts]
bpydevutil = "bpydevutil.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120